dummy/networking/ingress/echo-server-ingress.yaml
# for dummy/workload-resources/deployments/echo-server-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server-ingress
  annotations: # Annotations cho phép bạn lưu trữ các dữ liệu không xác định trước
    # Tùy từng ingress controller khác nhau mà phần này config sẽ khác nhau
    # Trong trường hợp này, là rewrite lại mọi path sang path / ở application
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: echo-server-service
                port:
                  number: 8080
